[IMPROVE] Improve fonts css

--- a/src/common/assets/less/index.less
+++ b/src/common/assets/less/index.less
@@ -1,11 +1,10 @@
 @import "~antd/dist/antd.less";
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&display=swap");
 
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
 * {
-  font-family: "Inter", sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
 
 @primary-color-bg: #1565c0; // font-color -> #ffffff
@@ -265,6 +264,5 @@ h1.ant-typography {
 .ant-layout-footer {
   background-color: @primary-color-bg-light;
   color: @font-color-on-primary-color-bg-light;
-  font-family: "Sacramento", cursive;
   font-size: 30px;
 }
