--- a/src/common/assets/less/index.less
+++ b/src/common/assets/less/index.less
@@ -1,330 +1,380 @@
 @import "~antd/dist/antd.less";
-// @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&display=swap");
-// @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap");
 // @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap:wght@400;500&display=swap");
 
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
 * {
   // font-family: "Work Sans", sans-serif;
   // font-family: "Poppins", sans-serif;
-  font-family: "Work Sans", sans-serif;
+  font-family: "Asap", sans-serif;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
-@primary-color-bg: #1565c0; // font-color -> #ffffff
-@primary-color-bg-light: #5e92f3; // #111111
-@primary-color-bg-dark: #003c8f; //#ffffff
-
-@font-color-on-primary-color-bg-dark: #ffffff;
-@font-color-on-primary-color-bg-light: #111111;
-@font-color-on-primary-color-bg: #ffffff;
-@font-color-on-secondary-color-bg: #111111;
-@font-color-on-secondary-color-bg-light: #111111;
-
-@secondary-color-bg: #ffc107; // #111111
-@secondary-color-bg-light: #fff350;
-
-@border-color: rgba(156, 163, 175, 1);
-@color-border-table: #777;
-
-.container-fluid {
-  margin-top: 15px;
-  margin-bottom: 15px;
+body.light {
+  @import "./light.less";
+  .mainThemeDependOnCss();
 }
 
-.card-product {
-  cursor: pointer;
-  border-radius: 4px;
-  border: 1px solid @border-color;
-  margin-top: 20px;
-  max-width: 310px;
+body.dark {
+  @import "./dark.less";
+  .mainThemeDependOnCss();
+}
 
-  & .ant-card-body {
-    padding: 12px;
-  }
-
-  &__title {
+.mainThemeDependOnCss () {
+  .wrapper {
+    text-align: right;
+    margin-bottom: 10px;
+    text-transform: uppercase;
     font-weight: bold;
-    font-size: 20px;
-    margin-top: 10px;
-  }
-
-  &__price > div {
     font-size: 18px;
-    color: #111;
+    overflow: hidden;
   }
 
-  &__price {
-    font-size: 18px;
-    color: #111;
+  .marquee {
+    color: @regular-color;
+    white-space: nowrap;
+    animation: rightThenLeft 10s linear infinite;
   }
 
-  &__description ul {
-    margin-top: 8px;
-    padding: 0;
-    list-style: none;
-    font-size: 13px;
+  @keyframes rightThenLeft {
+    0% {
+      margin-right: 0;
+    }
+    50% {
+      margin-right: 100%;
+    }
+    100% {
+      margin-right: 0;
+    }
+  }
+  .container-fluid {
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
 
-  &__button-icon {
-    margin-left: 5px;
-  }
-
-  & img {
-    transition: ease all 0.5s;
-    display: block;
-    margin: auto;
-    width: 120px;
-    height: 120px;
-  }
-
-  &:hover img {
-    transform: translateY(-10px);
-  }
-
-  &__action-group {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  // &:hover {
-  //   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  // }
-}
-
-.ant-layout-header {
-  background-color: @primary-color-bg;
-}
-
-.ant-menu {
-  background-color: @primary-color-bg;
-  color: @font-color-on-primary-color-bg;
-  font-weight: bold;
-}
-
-.ant-menu-horizontal > .ant-menu-item,
-.ant-menu-horizontal > .ant-menu-submenu {
-  border-bottom: none;
-  top: 0;
-}
-
-.ant-menu-horizontal {
-  border: none;
-}
-
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item:hover,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu:hover,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-active,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-active,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-open,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-open,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-selected,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-selected {
-  border: none;
-  color: @font-color-on-primary-color-bg-dark;
-  background-color: @primary-color-bg-dark;
-}
-
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu {
-  padding: 0px 10px;
-  margin: 0px;
-}
-
-header .ant-menu {
-  margin-left: 30px;
-}
-
-h2.ant-typography,
-h3.ant-typography,
-h1.ant-typography,
-h4.ant-typography {
-  color: @primary-color-bg-dark;
-}
-
-.ant-btn.ant-btn-primary {
-  background-color: @secondary-color-bg-light;
-  color: @font-color-on-secondary-color-bg-light;
-  border: 1px solid @secondary-color-bg-light;
-}
-
-.ant-btn.ant-btn-primary:hover {
-  background-color: @secondary-color-bg;
-  color: @font-color-on-secondary-color-bg;
-  border: 1px solid @secondary-color-bg;
-}
-
-.ant-btn:hover,
-.ant-btn:focus {
-  color: @secondary-color-bg;
-  border-color: @secondary-color-bg;
-}
-
-.ant-btn-dangerous:hover {
-  background: #ff4d4f;
-  color: #ffffff;
-  border: 1px solid #ff4d4f;
-}
-
-.ant-table-thead .ant-table-cell {
-  background-color: @primary-color-bg-dark;
-  color: @font-color-on-primary-color-bg-dark;
-  font-weight: bold;
-  text-transform: capitalize;
-}
-
-.ant-table table {
-  // border-left: 1px solid @color-border-table;
-  border: 1px solid @color-border-table;
-}
-
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-content
-  > table
-  > thead
-  > tr
-  > th,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-header
-  > table
-  > thead
-  > tr
-  > th,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-body
-  > table
-  > thead
-  > tr
-  > th,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-content
-  > table
-  > tbody
-  > tr
-  > td,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-header
-  > table
-  > tbody
-  > tr
-  > td,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-body
-  > table
-  > tbody
-  > tr
-  > td,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-content
-  > table
-  > tfoot
-  > tr
-  > th,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-header
-  > table
-  > tfoot
-  > tr
-  > th,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-body
-  > table
-  > tfoot
-  > tr
-  > th,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-content
-  > table
-  > tfoot
-  > tr
-  > td,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-header
-  > table
-  > tfoot
-  > tr
-  > td,
-.ant-table.ant-table-bordered
-  > .ant-table-container
-  > .ant-table-body
-  > table
-  > tfoot
-  > tr
-  > td {
-  border-right: 1px solid @color-border-table;
-}
-
-.ant-table-tbody > tr > td {
-  border-bottom: 1px solid @color-border-table;
-}
-
-.ant-layout-footer {
-  background-color: @primary-color-bg-light;
-  color: @font-color-on-primary-color-bg-light;
-}
-
-.small-header {
-  background-color: @secondary-color-bg-light;
-  color: @font-color-on-secondary-color-bg-light;
-  justify-content: flex-end;
-  align-items: center;
-
-  & ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
+  .card-product {
     cursor: pointer;
+    border-radius: 4px;
+    border: 1px solid @border-color;
+    margin-top: 20px;
+    max-width: 310px;
+    overflow: hidden;
+
+    & .ant-card-body {
+      padding: 12px;
+    }
+
+    &__title {
+      font-weight: bold;
+      font-size: 20px;
+      margin-top: 10px;
+      color: @color-title;
+    }
+
+    &__price > div {
+      font-size: 18px;
+      color: @card-font-color;
+    }
+
+    &__price {
+      font-size: 18px;
+      color: @card-font-color;
+    }
+
+    &__description ul {
+      margin-top: 8px;
+      padding: 0;
+      list-style: none;
+      font-size: 13px;
+      color: @regular-color;
+    }
+
+    &__button-icon {
+      margin-left: 5px;
+    }
+
+    & img {
+      transition: ease all 0.5s;
+      display: block;
+      margin: auto;
+      width: 120px;
+      height: 120px;
+    }
+
+    &:hover img {
+      transform: translateY(-10px);
+    }
+
+    &__action-group {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    // &:hover {
+    //   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    // }
+  }
+
+  .ant-layout-header {
+    background-color: @primary-color-bg;
+    position: fixed;
+    width: 100vw;
+    z-index: 1;
+  }
+
+  .ant-layout-header.hide {
+    display: none !important;
+  }
+
+  .ant-layout-content {
+    margin-top: 64px !important;
+    background-color: @bg-content;
+  }
+
+  .ant-menu {
+    background-color: @primary-color-bg;
+    color: @font-color-on-primary-color-bg;
+    font-weight: bold;
+  }
+
+  .ant-menu-horizontal > .ant-menu-item,
+  .ant-menu-horizontal > .ant-menu-submenu {
+    border-bottom: none;
+    top: 0;
+  }
+
+  .ant-menu-horizontal {
+    border: none;
+  }
+
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item:hover,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu:hover,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-active,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-active,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-open,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-open,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-selected,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-selected {
+    border: none;
+    color: @font-color-on-primary-color-bg-dark;
+    background-color: @primary-color-bg-dark;
+  }
+
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item,
+  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu {
+    padding: 0px 10px;
+    margin: 0px;
+  }
+
+  header .ant-menu {
+    margin-left: 22px;
+  }
+
+  h2.ant-typography,
+  h3.ant-typography,
+  h1.ant-typography,
+  h4.ant-typography {
+    color: @color-title;
+  }
+
+  .ant-btn.ant-btn-primary {
+    background-color: @secondary-color-bg-light;
+    color: @font-color-on-secondary-color-bg-light;
+    border: 1px solid @secondary-color-bg-light;
+  }
+
+  .ant-btn.ant-btn-primary:hover {
+    background-color: @secondary-color-bg;
+    color: @font-color-on-secondary-color-bg;
+    border: 1px solid @secondary-color-bg;
+  }
+
+  .ant-btn:hover,
+  .ant-btn:focus {
+    color: @secondary-color-bg;
+    border-color: @secondary-color-bg;
+  }
+
+  .ant-btn-dangerous:hover {
+    background: @bg-color-dangerous-button;
+    color: @color-on-bg-color-dangerous-button;
+    border: 1px solid @bg-color-dangerous-button;
+  }
+
+  .ant-table-thead .ant-table-cell {
+    background-color: @primary-color-bg-dark;
+    color: @font-color-on-primary-color-bg-dark;
+    font-weight: bold;
+    text-transform: capitalize;
+  }
+
+  .ant-table table {
+    // border-left: 1px solid @color-border-table;
+    border: 1px solid @color-border-table;
+  }
+
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-content
+    > table
+    > thead
+    > tr
+    > th,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-header
+    > table
+    > thead
+    > tr
+    > th,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-body
+    > table
+    > thead
+    > tr
+    > th,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-content
+    > table
+    > tbody
+    > tr
+    > td,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-header
+    > table
+    > tbody
+    > tr
+    > td,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-body
+    > table
+    > tbody
+    > tr
+    > td,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-content
+    > table
+    > tfoot
+    > tr
+    > th,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-header
+    > table
+    > tfoot
+    > tr
+    > th,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-body
+    > table
+    > tfoot
+    > tr
+    > th,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-content
+    > table
+    > tfoot
+    > tr
+    > td,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-header
+    > table
+    > tfoot
+    > tr
+    > td,
+  .ant-table.ant-table-bordered
+    > .ant-table-container
+    > .ant-table-body
+    > table
+    > tfoot
+    > tr
+    > td {
+    border-right: 1px solid @color-border-table;
+  }
+
+  .ant-table-tbody > tr > td {
+    border-bottom: 1px solid @color-border-table;
+  }
+
+  .ant-layout-footer {
+    background-color: @primary-color-bg-light;
+    color: @font-color-on-primary-color-bg-light;
+  }
+
+  .small-header {
+    background-color: @secondary-color-bg-light;
+    color: @font-color-on-secondary-color-bg-light;
+    justify-content: flex-end;
+    align-items: center;
+
+    & ul {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      cursor: pointer;
+
+      & li {
+        margin: 0px 5px;
+        font-size: 13px;
+        padding: 2px 4px;
+
+        & span {
+          margin-left: 2px;
+        }
+
+        &:hover {
+          background-color: @secondary-color-bg;
+          color: @font-color-on-secondary-color-bg;
+        }
+      }
+    }
+  }
+
+  .user-menu {
+    height: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 
     & li {
-      margin: 0px 5px;
-      font-size: 13px;
-      padding: 2px 4px;
+      padding: 14px 14px;
+      transition: 0.4s;
+      cursor: pointer;
 
-      & span {
-        margin-left: 2px;
+      & a {
+        color: @link-font-color;
       }
 
       &:hover {
-        background-color: @secondary-color-bg;
-        color: @font-color-on-secondary-color-bg;
+        color: @link-font-color-hover;
       }
     }
   }
-}
 
-.user-menu {
-  height: 100%;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  .ant-card {
+    background: none;
+  }
 
-  & li {
-    padding: 14px 14px;
-    transition: 0.4s;
-    cursor: pointer;
+  .ant-card-body {
+    background-color: @bg-card;
+  }
 
-    & a {
-      color: @font-color-on-secondary-color-bg;
-    }
-
-    &:hover {
-      color: @font-color-on-secondary-color-bg;
-    }
+  .card-combo {
+    border: 1px solid @border-color;
+    overflow: hidden;
   }
 }
