[FIX] Fix affix

--- a/src/common/assets/less/dark.less
+++ b/src/common/assets/less/dark.less
@@ -51,3 +51,13 @@ p {
 .ant-card > div {
   color: #dddddd;
 }
+
+.ant-back-top-content {
+  border: 1px solid @secondary-color-bg;
+  color: @regular-color;
+}
+
+.affix-mobile {
+  border: 1px solid @secondary-color-bg !important;
+  color: @regular-color;
+}
