--- a/src/common/assets/less/index.less
+++ b/src/common/assets/less/index.less
@@ -393,6 +393,13 @@ body.dark {
   }
 
   .affix-mobile {
-    display: none !important;
+    position: fixed;
+    border: 1px solid #111;
+    width: 40px;
+    height: 40px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
   }
 }
