--- a/src/common/assets/less/index.less
+++ b/src/common/assets/less/index.less
@@ -75,6 +75,9 @@ body.dark {
       font-size: 20px;
       margin-top: 10px;
       color: @color-title;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &__price > div {
@@ -103,8 +106,8 @@ body.dark {
       transition: ease all 0.5s;
       display: block;
       margin: auto;
-      width: 120px;
-      height: 120px;
+      width: 190px;
+      height: 134px;
     }
 
     &:hover img {
@@ -402,4 +405,8 @@ body.dark {
     align-items: center;
     border-radius: 50%;
   }
+}
+
+.ant-steps-item-icon .ant-steps-icon {
+  top: -4px;
 }
